--- a/css/style.css
+++ b/css/style.css
@@ -3,5 +3,5 @@
 	margin: 0;
 }
 body {
-	background: url("../images/bg.jpg") no-repeat center 7%;
+	background: url("../images/background.jpg") no-repeat center 7%;
 }
