--- a/css/style.css
+++ b/css/style.css
@@ -3,5 +3,6 @@
 	margin: 0;
 }
 body {
-	background: url("../images/background.jpg") no-repeat center 7%;
+	background-image: url(../images/background1.jpg);
+	background-size: cover;
 }
