--- a/css/style.css
+++ b/css/style.css
@@ -4,5 +4,27 @@
 }
 body {
 	background-image: url(../images/background1.jpg);
-	background-size: cover;
+	background-repeat: no-repeat;
+
+}
+#rocket {
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+a#roaming:link,a#roaming:visited{
+	display: block;
+	position: absolute;
+	left: 50%;
+	margin-left: -90px;
+	margin-top: 35%;
+	background: url(../images/button.png) no-repeat;
+	width: 186px;
+	height: 48px;
+	text-indent: -9999px;
+}
+
+a#roaming:hover,a#roaming:active {
+	background-position: -186px 0;
 }
